Bug 323475 - Searching 3351005296 ISBN with Google Book Search incorrectly shows not found
Summary: Searching 3351005296 ISBN with Google Book Search incorrectly shows not found
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.3.8
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-14 02:57 UTC by Robby Stephenson
Modified: 2013-08-15 03:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.9
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2013-08-14 02:57:05 UTC
When doing a multiple ISBN search, Tellico indicates "not found" when it is actually successful

Reproducible: Always
Comment 1 Robby Stephenson 2013-08-15 03:03:04 UTC
Git commit 70f3a5825bbee3c9f73a782a50291f0b2e548b77 by Robby Stephenson.
Committed on 15/08/2013 at 03:01.
Pushed by rstephenson into branch '2.3'.

Do not show "Not Found" dialog when only one ISBN is searched

Google Book Search seemingly has some data error, see
http://mail.kde.org/pipermail/tellico-users/2013-August/000910.html

So when searching for ISBN values, show the "Not Found" dialog only when
more than one value is in the search.
FIXED-IN: 2.3.9

M  +11   -6    src/fetchdialog.cpp
M  +2    -0    src/tests/isbntest.cpp
M  +1    -0    src/utils/isbnvalidator.cpp

http://commits.kde.org/tellico/70f3a5825bbee3c9f73a782a50291f0b2e548b77