Do not show "Not Found" dialog when only one ISBN is searched

Google Book Search seemingly has some data error, see
http://mail.kde.org/pipermail/tellico-users/2013-August/000910.html

So when searching for ISBN values, show the "Not Found" dialog only when
more than one value is in the search.
BUG: 323475
FIXED-IN: 2.3.9