src/utils/isbnvalidator.cpp
@@ -569,4 +569,5 @@ bool Tellico::ISBNComparison::operator()(const QString& value1_, const QString& 
   }
   return value1 == value2;
 }
+
 #include "isbnvalidator.moc"
